--- a/demoservers.yml
+++ b/demoservers.yml
@@ -46,3 +46,35 @@ Resources:
                     FromPort: 0
                     ToPort: 65535
                     CidrIp: 0.0.0.0/0
+    WebAppLaunchConfig:
+    Type: AWS::AutoScaling::LaunchConfiguration
+    Properties:
+        UserData:
+            Fn::Base64: !Sub |
+            #!/bin/bash
+            apt-get update -y
+            apt-get install unzip awscli -y
+            apt-get install apache2 -y
+            systemctl start apache2.service
+            cd /var/www/html
+            aws s3 cp s3://udacity-demo-1/udacity.zip .
+            unzip -o udacity.zip
+        ImageId: ami-005bdb005fb00e791
+        # IamInstanceProfile: !Ref ProfileWithRolesForOurApp
+        SecurityGroups:
+            - Ref: WebServerSecurityGroup
+        InstanceType: t2.micro
+        BlockDeviceMappings:
+            - DeviceName: "/dev/sdk"
+            Ebs:
+                VolumeSize: "10"
+    WebAppGroup:
+        Type: AWS::AutoScaling::AutoScalingGroup
+        Properties:
+        VPCZoneIdentifier:
+            - Fn::ImportValue: !Sub "${EnvironmentName}-PRIV-NETS"
+        LaunchConfigurationName:
+            Ref: WebAppLaunchConfig
+        MaxSize: "5"
+        MinSize: "2"
+        LoadBalancerNames: !Ref "WebAppTargetGroup"
