--- a/demoservers.yml
+++ b/demoservers.yml
@@ -22,6 +22,10 @@ Resources:
                     FromPort: 80
                     ToPort: 80
                     CidrIp: 0.0.0.0/0
+                -   IpProtocol: tcp
+                    FromPort: 8080
+                    ToPort: 8080
+                    CidrIp: 0.0.0.0/0
     WebServerSecGroup:
         Type: AWS::EC2::SecurityGroup
         Properties:
@@ -52,16 +56,22 @@ Resources:
             UserData:
                 Fn::Base64: !Sub |
                     #!/bin/bash
-                    apt-get update -y
-                    apt-get install unzip awscli -y
-                    apt-get install apache2 -y
-                    systemctl start apache2.service
-                    cd /var/www/html
-                    aws s3 cp s3://udacity-demo-1/udacity.zip .
-                    unzip -o udacity.zip
-            ImageId: ami-005bdb005fb00e791
+                    # Install docker
+                    apt-get update
+                    apt-get install -y apt-transport-https ca-certificates curl software-properties-common
+                    curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+                    add-apt-repository \
+                    "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
+                    $(lsb_release -cs) \
+                    stable"
+                    apt-get update
+                    apt-get install -y docker-ce
+                    usermod -aG docker ubuntu
+                    docker run -p 8080:8080 tomcat:8.0
+            ImageId: ami-0d1cd67c26f5fca19
+            KeyName: predatorboladao
             SecurityGroups:
-            - Ref: WebServerSecGroup
+            -   Ref: WebServerSecGroup
             InstanceType: t2.micro
             BlockDeviceMappings:
             -   DeviceName: "/dev/sdk"
@@ -71,12 +81,13 @@ Resources:
         Type: AWS::AutoScaling::AutoScalingGroup
         Properties:
             VPCZoneIdentifier:
-                - Fn::ImportValue: !Sub "${EnvironmentName}-PRIV-NETS"
+                - Fn::ImportValue: !Sub "${EnvironmentName}-PUB-NETS"
             LaunchConfigurationName:
                 Ref: WebAppLaunchConfig
             MaxSize: "5"
             MinSize: "2"
-            LoadBalancerNames: !Ref "WebAppTargetGroup"
+            TargetGroupARNs: 
+            -   Ref: WebAppTargetGroup
     WebAppLB:
         Type: AWS::ElasticLoadBalancingV2::LoadBalancer
         Properties:
@@ -102,9 +113,9 @@ Resources:
             Actions:
             -   Type: forward
                 TargetGroupArn: !Ref 'WebAppTargetGroup'
-                Conditions:
-                -   Field: path-pattern
-                    Values: [/]
+            Conditions:
+            -   Field: path-pattern
+                Values: [/]
             ListenerArn: !Ref 'Listener'
             Priority: 1
     WebAppTargetGroup:
